--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: python
 python:
   3.11.1
 install:
-  - pip install  -q -r requirements.txt
+  - pip install  -q -r requirements-dev.txt
+script:
+  - flake8
